[refactor]: migrated to java 22